syntax = "proto3";

package proto;

option go_package = "shared/proto;proto";

service NotificationService {
  rpc GetNotifications(GetNotificationsRequest) returns (NotificationsList) {}
}

message GetNotificationsRequest {
  int64 user_id = 1;
}

message Notification {
  int64 id = 1;
  int64 user_id = 2;
  string author = 3;
  string subject = 4;
  string content = 5;
  string created_at = 6;
}

message NotificationsList {
  repeated Notification notifications = 1;
}